--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,8 +9,9 @@
     {% endif %}
 </head>
 <body>
-<div>Microblog: <a href="/index">Home</a>
-<a href="/login">Login</a>
+<div>Microblog:
+    <a href="{{ url_for('index') }}">Home</a>
+    <a href="{{ url_for('login') }}">Login</a>
 </div>
 <hr>
 {% with messages = get_flashed_messages() %}
